--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ endif()
 #endif()
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  add_compile_options(-Wall -Wextra -Wpedantic -Og -ggdb -D_GLIBCXX_DEBUG)
+  add_compile_options(-Wall -Wextra -Wpedantic -Og -ggdb)
 endif()
 
 # find dependencies
